# eventum

./: LICENCE.txt  main.py  pyproject.toml
src/app/: app.py  connection.py  connections.py  event_listener.py  lifespan.py  middleware.py  middleware_chain.py  routing.py
src/app/exceptions/: ws_exception.py
src/app/middlewares/: __init__.py  exceptions_middleware.py  server_error_middleware.py
src/app/responses/: ws_response.py
