[tool.poetry]
name = "eventum"
version = "0.1.0"
description = ""
authors = ["gaulix <vlnazarenko1199@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
orjson = "^3.10.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
